@@ -138,7 +138,7 @@ is($orchestrator->get_vrf_by_id,
     },
     'get_vrf_by_id ok');
 
-is($orchestrator->get_vrf_security_policies_by_ids(0, 0),
+is(my $vrf_security_policy = $orchestrator->get_vrf_security_policies_by_ids(0, 0),
     hash {
         field data      => hash {
             etc();
@@ -152,6 +152,9 @@ is($orchestrator->get_vrf_security_policies_by_ids(0, 0),
         end();
     },
     'get_vrf_security_policies_by_ids ok');
+
+ok($orchestrator->update_vrf_security_policies_by_ids(0, 0, $vrf_security_policy),
+    'update_vrf_security_policies_by_ids ok');
 
 is(my $appliances = $orchestrator->list_appliances,
     array {
